--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.0",
+    "prettier": "^1.19.1",
+    "prettier-eslint": "^9.0.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
